--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
         "keyball"
-    ]
+    ],
+    "files.associations": {
+        "auto_click_layer.h": "c"
+    }
 }
